# mnemos

./: .env.example  .gitignore  pyproject.toml
src/mnemos/: __main__.py  cli.py  dev.py
src/mnemos/app/: bootstrap.py  errors.py
src/mnemos/config/: __init__.py  constants.py  settings.py
src/mnemos/discord/: __init__.py  bot.py  commands.py  constants.py  context.py  responders.py  text.py  types.py
src/mnemos/inference/: __init__.py  client.py  constants.py  messages.py  models.py  runner.py
src/mnemos/prompts/: __init__.py  chat.py  system.py
src/mnemos/storage/: __init__.py  settings_store.py
src/mnemos/tools/: __init__.py  definitions.py  executor.py  read_url.py  web_search.py
tests/: test_cli.py
tests/config/: test_settings.py
tests/discord/: test_bot.py  test_commands.py  test_context.py  test_responders.py  test_text.py
tests/inference/: test_client_content.py  test_models.py  test_runner.py
tests/prompts/: test_chat.py
tests/storage/: test_settings_store.py
